Give hints to all exercises. Add new content for graphs chapter.

--- a/Exercises/Sorting/BinsortMCQ2.html
+++ b/Exercises/Sorting/BinsortMCQ2.html
@@ -15,7 +15,7 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">A main disadvantage of the first Binsort
+      <p class="question">An important disadvantage of the first Binsort
       algorithm shown in this module is:</p>
       <div class="solution"><var>It works only for a permutation of the
 numbers from 0 to <code>n-1</code></var></div>
@@ -25,7 +25,8 @@ numbers from 0 to <code>n-1</code></var></div>
 	<li><var>"None of these answers"</var></li>
       </ul>  
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>The behavior is the same for all input.</p>
+	<p>Each key value has to have a bin, and no key value can be repeated.</p>
       </div>
     </div>
   </div>
