--- a/Exercises/Sorting/BinsortMCQ4.html
+++ b/Exercises/Sorting/BinsortMCQ4.html
@@ -27,7 +27,10 @@
 	<li><var>"None of these answers"</var></li>
       </ul>  
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>It processes the records from first to last.</p>
+	<p>Given two records with the same key value, where does the
+	second one go?</p>
+	<p>It goes at the end of the bin, so they do not switch order.</p>
       </div>
     </div>
   </div>
