--- a/Exercises/Sorting/BinsortMCQ5.html
+++ b/Exercises/Sorting/BinsortMCQ5.html
@@ -29,7 +29,10 @@
 	<li><var><code>\Theta(\mathrm{MaxKeyValue})</code></var></li>
       </ul>  
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>We need a separate bin for every key value.</p>
+	<p>And we need to look at every such bin.</p>
+	<p>So the cost has to be related to both the number of records
+	and the number of bins.</p>
       </div>
     </div>
   </div>
