--- a/Exercises/Sorting/BinsortTF1.html
+++ b/Exercises/Sorting/BinsortTF1.html
@@ -17,7 +17,7 @@
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">
-	Bin sort's time complexity depends on the
+	Binsort's time complexity depends on the
 	initial ordering of the keys in the input array.</p>
       <div class="solution"><var>"False"</var></div>
       <ul class="choices" data-category="true">
@@ -25,7 +25,8 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+	<p>Binsort takes each record and assigns it to a bin.</p>
+        <p>Binsort does the same work no matter what order the records.</p>
       </div>
     </div>
   </div>
