--- a/Exercises/Sorting/BubsortMCQwhen.html
+++ b/Exercises/Sorting/BubsortMCQwhen.html
@@ -15,15 +15,15 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">When is Bubblesort a good choice for sorting an array?</p>
-      <div class="solution"><var>"There is no situation where Bubblesort is the best choice over all of the others in this chapter"</var></div>
+      <p class="question">When is Bubble Sort a good choice for sorting an array?</p>
+      <div class="solution"><var>"There is no situation where Bubble Sort is the best choice over all of the others in this chapter"</var></div>
       <ul class="choices">
 	<li><var>"Each component of the array requires a large amount of memory"</var></li>
 	<li><var>"Each component of the array requires a small amount of memory"</var></li>
 	<li><var>"The array has only a few items out of place"</var></li>	  	 
       </ul>
 	  <div class="hints">
-	   <p>Does Bubble Sort's vary with how much the input is out
+	   <p>Does Bubble Sort's cost vary with how much the input is out
 	      of order?</p>
 	   <p>Bubble Sort always does a lot of work, as compared to
 	      other sorting algorithms</p>
