--- a/Exercises/Sorting/ExchangeMCQavg.html
+++ b/Exercises/Sorting/ExchangeMCQavg.html
@@ -23,7 +23,10 @@
 	<li><var>Worse than <code>\Theta(n^2)</code></var></li>
       </ul>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+	<p><code>n(n-1)/4 = n^2/4 - n/4</code>.</p>
+	<p>From the rules on asymptotic analysis,
+	  <code>\Theta(n^2/4 - n/4)</code>
+	  is <code>\Theta(n^2)</code></p>
       </div>
     </div> 	  
   </div>
