--- a/Exercises/Sorting/ExchangeMCQexchange.html
+++ b/Exercises/Sorting/ExchangeMCQexchange.html
@@ -24,7 +24,9 @@
 	<li><var>Any <code>\Theta(n)</code> sort</var></li>
       </ul>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>Most of the sorts that we study swap records.</p>
+	<p>Insertion Sort is not the only exchange sort.</p>
+	<p>An "exchange" means a swap of adjacent records.</p>
       </div>
     </div> 
   </div>
