--- a/Exercises/Sorting/ExchangeMCQinver.html
+++ b/Exercises/Sorting/ExchangeMCQinver.html
@@ -22,7 +22,10 @@
 	<li><var>"A type of sort"</var></li>
       </ul>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>We have not used "inversion" to refer to a type of sort.</p>
+	<p>While "inversions" are related to swaps (since ultimately a
+	swap is needed to undo an inversion), it is not a swap.</p>
+	<p>Inversion refers to an instance of a record being out of order.</p>
       </div>
     </div> 
   </div>
