--- a/Exercises/Sorting/ExchangeMCQperm.html
+++ b/Exercises/Sorting/ExchangeMCQperm.html
@@ -25,7 +25,11 @@
 	<li><var><code>n(n+1)/2</code></var></li>
       </ul>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>There are <code>n</code> ways to pick the first record.</p>
+	<p>That leaves <code>n-1</code> ways to pick the second	record.</p>
+	<p>This means that there are <code>n * (n-1)</code> ways to
+	pick the first two records.</p>
+	<p>And so on.</p>
       </div>
     </div> 
   </div>
