--- a/Exercises/Sorting/ExchangeMCQswap.html
+++ b/Exercises/Sorting/ExchangeMCQswap.html
@@ -31,7 +31,9 @@
 	<li><var><code>n - 1</code></var></li>
       </ul>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>An inversion requires a swap to undo it.</p>
+	<p>The number of comparisons done by an algorithm is generally
+	different from the number of swaps.</p>
       </div>
     </div> 
   </div>
