--- a/Exercises/Sorting/ExchangeTF1.html
+++ b/Exercises/Sorting/ExchangeTF1.html
@@ -29,7 +29,11 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>Any given pair of records is either in order, or not in
+        order.</p>
+	<p>Being out of order is called an inversion.</p>
+	<p>If your pair is in order in some array, then it must be out
+	of order in the reverse.</p>
       </div>
     </div>
   </div>
