--- a/Exercises/Sorting/ExchangeTF2.html
+++ b/Exercises/Sorting/ExchangeTF2.html
@@ -29,7 +29,7 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>Every pair must be inverted in exactly one of these arrays.</p>
       </div>
     </div>
   </div>
