--- a/Exercises/Sorting/HeapsortMCQ3.html
+++ b/Exercises/Sorting/HeapsortMCQ3.html
@@ -23,7 +23,10 @@
 	<li><var>"None of these answers."</var></li>
       </ul>  
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>Heapsort does not need auxiliary storage.</p>
+        <p>Heapsort runs in <code>\Theta(n \log n)</code> time.</p>
+	<p>Equal-valued records might be in different sides of the
+	heap, and can get out of relative order.</p>
       </div>
     </div>
   </div>
