--- a/Exercises/Sorting/HeapsortMCQequal.html
+++ b/Exercises/Sorting/HeapsortMCQequal.html
@@ -25,7 +25,9 @@
 	<li><var><code>\Theta(n)</code></var></li>	 	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Heapsort has the same asymptotic cost in the best, average,
+	and worst cases.</p>
+	<p>Processing each record costs <code>\Theta(\log n)</code> time.</p>
       </div>
     </div> 	  
   </div>
