--- a/Exercises/Sorting/HeapsortMCQspace.html
+++ b/Exercises/Sorting/HeapsortMCQspace.html
@@ -26,7 +26,7 @@
 	<li><var><code>\Theta(n^2)</code></var></li>
       </ul>  
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Heapsort does not require any auxilliary arrays.</p>
       </div>
     </div>
   </div>
