--- a/Exercises/Sorting/InssortMCQcomplex.html
+++ b/Exercises/Sorting/InssortMCQcomplex.html
@@ -24,7 +24,8 @@
 	<li><var>"Worst, average, and Best"</var></li>	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Insertion Sort is really cheap in the best case.</p>
+	<p>Its average and worst case times differ by a constant factor.</p>
       </div>
     </div>
   </div>
