--- a/Exercises/Sorting/MergeImplMCQ2.html
+++ b/Exercises/Sorting/MergeImplMCQ2.html
@@ -24,7 +24,10 @@
 	<li><var><code>\log n</code></var></li>			  	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>There are <code>\log n</code> passes.</p>
+	<p>But the implementation is careful to reuse the auxilliary
+	array rather than make a new one on each pass.</p>
+	<p>So Mergesort requires the original array and an auxilliary array.</p>
       </div>
     </div>
   </div>
