--- a/Exercises/Sorting/MergeImplTF1.html
+++ b/Exercises/Sorting/MergeImplTF1.html
@@ -25,7 +25,9 @@
         <li><var>"False"</var></li>
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Look at the length of the code given in the modules.</p>
+	<p>There are a lot of details to deal with when implementing
+	Mergesort on an array.</p>
       </div>
     </div>
   </div>
