--- a/Exercises/Sorting/MergesortMCQ4.html
+++ b/Exercises/Sorting/MergesortMCQ4.html
@@ -28,7 +28,11 @@
 	<li><var>"Achieving the base case"</var></li>
       </ul>  
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>There is no partition in Mergesort.</p>
+	<p>The two main parts of Mergesort are splitting and
+	merging.</p>
+	<p>Splitting is easy -- just cut the list into two halves.</p>
+	<p>Merging is not hard, but it is more complicated than splitting.</p>
       </div>
     </div>
   </div>
