--- a/Exercises/Sorting/QuicksortMCQcosta.html
+++ b/Exercises/Sorting/QuicksortMCQcosta.html
@@ -24,7 +24,9 @@
 	<li><var><code>\Theta(n \log n)</code></var></li>	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>There are a few really bad inputs.</p>
+	<p>The bad cases have pivots that repeatedly reduce the
+	partition size by one.</p>
       </div>
     </div>
   </div>
