--- a/Exercises/Sorting/QuicksortMCQcostb.html
+++ b/Exercises/Sorting/QuicksortMCQcostb.html
@@ -26,7 +26,11 @@
 	<li><var><code>\Theta(n^2)</code></var></li>	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>While there are a few bad inputs, they are so few as to not
+	affect the average or best cases.</p>
+	<p>The best thing that can happen is that every pivot split
+	its partition in half. Something close to this happens in the
+	average case.</p>
       </div>
     </div>
   </div>
