--- a/Exercises/Sorting/QuicksortMCQfraction.html
+++ b/Exercises/Sorting/QuicksortMCQfraction.html
@@ -28,7 +28,12 @@
 	<li><var>Be less than 1 in <code>n!</code></var></li>	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>For any size <code>n</code>, it does happen that there are
+	inputs that have cost <code>n^2</code>.</p>
+	<p>But if there were a constant fraction of such cases
+	regardless of <code>n</code>, then the average would also
+	be <code>n^2</code>.</p>
+	<p>So the fraction must be be dropping as <code>n</code> grows.</p>
       </div>
     </div>
   </div>
