--- a/Exercises/Sorting/QuicksortMCQpartit.html
+++ b/Exercises/Sorting/QuicksortMCQpartit.html
@@ -23,7 +23,9 @@
 	<li><var>"The middle position in the partition"</var></li>
       </ul>  
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>When partition is called, the pivot is at the end of the partition.</p>
+	<p>The partition operation itself does not move the
+	pivot. That is done afterwards by the Quicksort function itself.</p>
       </div>
     </div>
   </div>
