--- a/Exercises/Sorting/QuicksortPartitPRO.html
+++ b/Exercises/Sorting/QuicksortPartitPRO.html
@@ -1,5 +1,5 @@
 <!--
-Insertion Sort mini-proficiency exercise.
+Quicksort mini-proficiency exercise.
 Written by Gayathri Subramanian, Dan Breakiron, and Cliff Shaffer
 -->
 
@@ -139,7 +139,12 @@ var checkAnswer = function (length) {
         </div>
       </div>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>In this question, you will just do the partition step.</p>
+	<p>For this question, you will NOT move the pivot at the end
+	of the partition process.</p> 
+	<p>Remember that partition moves left and right indices
+	inwards, swapping records as appropriate. So you will need to
+	swap some records by clicking on the two to exchange.</p>
       </div>
     </div>
   </div>
