--- a/Exercises/Sorting/RadixSortMCQ2.html
+++ b/Exercises/Sorting/RadixSortMCQ2.html
@@ -23,7 +23,13 @@
 	<li><var>"None of these answers"</var></li>	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Radix Sort is stable (otherwise, each digit's sort would mess
+	up the previous digits).</p>
+	<p>Radix Sort's time requirements depend on the number of
+	records and the number of digits. When implemented properly,
+	the number of digits is no worse than the log of the number of
+	records.</p>
+	<p>Radix Sort does need auxilliary storage.</p>
       </div>
     </div> 
   </div>
