--- a/Exercises/Sorting/RadixSortTF1.html
+++ b/Exercises/Sorting/RadixSortTF1.html
@@ -26,7 +26,11 @@
 	<li><var>"False"</var></li>
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Using a Binsort on the records based on the current digit
+	is a reasonable thing to do within the context of the Radix Sort.</p>
+	<p>But, using other sorts on those digits might give the same effect.</p>
+	<p>The key is that the previously-sorted digits do not get
+	pushed out of order, which can be avoided by using a stable sort.</p>
       </div>
     </div>
   </div>
