--- a/Exercises/Sorting/RadixSortTF3.html
+++ b/Exercises/Sorting/RadixSortTF3.html
@@ -22,10 +22,14 @@
       <div class="solution"><var>"False"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
-	<li><var>"False"</var></li>			  	  	 
+	<li><var>"False"</var></li>
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Words have widely varing lengths.</p>
+	<p>Unless one implements a different version of Radix Sort to
+           account for different lengths, the longest length will
+           dictate the amount of work to be done.</p>
+	<p>That wastes a lot of time on short words.</p>
       </div>
     </div> 
   </div>
