--- a/Exercises/Sorting/RadixSortTFbin.html
+++ b/Exercises/Sorting/RadixSortTFbin.html
@@ -25,7 +25,8 @@
 	<li><var>"False"</var></li>
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Binsort uses a single array.</p>
+	<p>Each key value gets its own array position.</p>
       </div>
     </div>
   </div>
