--- a/Exercises/Sorting/RadixsortPRO.html
+++ b/Exercises/Sorting/RadixsortPRO.html
@@ -24,7 +24,7 @@ Written by Gayathri Subramanian and Cliff Shaffer
     #container {
       border: 0;
       width: 780px;
-      height: 740px;
+      height: 800px;
       padding: 10px;
       overflow: hidden;
     }
@@ -32,11 +32,11 @@ Written by Gayathri Subramanian and Cliff Shaffer
     .jsavarray { position: absolute; }
 
     #container .jsavarray {
-      left: -10px;
       height: 80px;
     }
 
     #reset { margin-right: 20px;}
+    .jsavcanvas { height: 470px;}
   </style>
 </head>
 
@@ -189,7 +189,10 @@ function checkAnswer(arr_size) {
 	</div>
       </div>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Just take each record on the left one at a time and move it
+	to the proper bin on the right.</p>
+	<p>Be sure that you are looking at the correct digit that the
+	question asks for.</p>
       </div>
     </div>
   </div>
