--- a/Exercises/Sorting/SelsortMCQ2.html
+++ b/Exercises/Sorting/SelsortMCQ2.html
@@ -29,13 +29,11 @@
         How many records are now guaranteed to be in their final
 	position (never to be moved again by the sort)?</p>
       <div class="solution"><var>NUM</var></div>
-      <ul class="choices">
-	<li><var>Num2</var></li>
-	<li><var>Numm1</var></li>
-	<li><var>Nump1</var></li>	  	 
-      </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>On each pass, Selection Sort puts a records into its final
+	position.</p>
+	<p>So, if Selection Sort has done <var>NUM</var> passes, then
+	at least <var>NUM</var> records are in their final positions.</p>
       </div>
     </div>
   </div>   
