--- a/Exercises/Sorting/ShellsortTFincr.html
+++ b/Exercises/Sorting/ShellsortTFincr.html
@@ -26,7 +26,10 @@
 	<li><var>"False"</var></li>
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>There is no requirement that the number of records be
+	divisible by the increment size.</p>
+	<p>Even an increment size greater than half the number of
+	records is legal, it just won't cause any work to be done.</p>
       </div>
     </div>
   </div>
