--- a/Exercises/Sorting/SortAlgCompMCQ10.html
+++ b/Exercises/Sorting/SortAlgCompMCQ10.html
@@ -26,7 +26,11 @@
 	<li><var>"Insertion Sort"</var></li>
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Bubble Sort, Insertion Sort, and Selection Sort are
+	referred to as "quadratic sorts" because of their worst-case
+	time cost.</p>
+	<p>The cost of Radix Sort depends both on the number of
+	records and the number of digits in the key.</p>
       </div>
     </div>
   </div>
