--- a/Exercises/Sorting/SortAlgCompMCQ11.html
+++ b/Exercises/Sorting/SortAlgCompMCQ11.html
@@ -26,7 +26,11 @@
 	<li><var><code>O(\log m + \log n)</code></var></li>	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Mergeing compares two records, and selects the smaller.</p>
+	<p>Each record gets selected once, and each selection requires
+	a comparison.</p>
+	<p>Except, the last record does not need a comparison to be
+	selected because there is no longer anything to compare it to.</p>
       </div>
     </div>
   </div>
