--- a/Exercises/Sorting/SortAlgCompMCQ6.html
+++ b/Exercises/Sorting/SortAlgCompMCQ6.html
@@ -26,7 +26,13 @@
 	<li><var>"Linear"</var></li>	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>"Linear" refers to an algorithm cost.</p>
+	<p>"External" refers to an algorithm to sort records on
+	disk.</p>
+	<p>"Consistent" is not standard terminology related to
+	sorting.</p>
+	<p>"Stable" sorting algorithms preserve the relative order of
+	equal-valued keys.</p>
       </div>
     </div>
   </div>
