--- a/Exercises/Sorting/SortAlgCompTF13.html
+++ b/Exercises/Sorting/SortAlgCompTF13.html
@@ -25,7 +25,10 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Selection Sort can be viewed as an optimization of Bubble
+	Sort.</p>
+	<p>On each pass, Selection Sort just picks out the next record,
+	while Bubble Sort has to do a lot of swapping.</p>
       </div>
     </div>
   </div>
