--- a/Exercises/Sorting/SortBoundMCQ1.html
+++ b/Exercises/Sorting/SortBoundMCQ1.html
@@ -25,7 +25,15 @@
           <li><var>"The cost of the worst case input for the problem"</var></li>
         </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>For a given problem, it is possible to write an algorithm
+	that is as bad as we want. So defining a bound in terms of bad
+	algorithms is not useful.</p>
+	<p>We look at the worst-case input to determine the worst-case
+	upper bound for an algorithm, not a problem.</p>
+	<p>To get the upper bound for a problems, we
+	compare the cost for each algorithm that we know.</p>
+	<p>The upper bound of the problem is the upper bound of the
+	best known algorithm.</p>
       </div>
       </div>
     </div>
