--- a/Exercises/Sorting/SortBoundMCQ2.html
+++ b/Exercises/Sorting/SortBoundMCQ2.html
@@ -26,7 +26,18 @@
           <li><var>"The maximum cost that any algorithm to solve the problem could have"</var></li>
         </ul>
 	<div class="hints">
-	  <p>Sorry, no hints are available.</p>
+	  <p>Upper and lower bounds are used to describe to what we
+	  know, and we do not always know that these are the same for
+	  a given algorithm.</p>
+	  <p>Lower bound refers to the class of inputs that we are
+	  considering (best, average, or worst-case). So it does NOT
+	  necessarily have anything to do with the best-case
+	  input.</p>
+	  <p>The cost of the best algorithm that we know sets a limit
+	  on the upper bound of the problem, not the lower bound.</p>
+	  <p>The lower bound refers to the best possible cost (for the
+	  class of inputs, such as worst-case) for ANY algorithm that
+	  solves the problem.</p>
 	</div>
       </div>
     </div>
