--- a/Exercises/Sorting/SortBoundMCQ3.html
+++ b/Exercises/Sorting/SortBoundMCQ3.html
@@ -25,7 +25,14 @@
           <li><var>The problem is <code>\Theta(n)</code></var></li>
         </ul>
 	<div class="hints">
-	  <p>Sorry, no hints are available.</p>
+	  <p>The universe hasn't exploded yet.</p>
+	  <p>Just because the bounds meet, it does not mean that the
+	  cost is <code>\Theta(n)</code>.</p>
+	  <p>We might need to implement an algorithm even if we are
+	  not certain that it is the best.</p>
+	  <p>When the bounds meet, then we know for certain if an
+	  algorithm to solve that problem is best (within a constant
+	  factor).</p>
 	</div>
       </div>
     </div>
