--- a/Exercises/Sorting/SortBoundMCQ5.html
+++ b/Exercises/Sorting/SortBoundMCQ5.html
@@ -18,7 +18,7 @@
       <p class="question">Which of the following is NOT relevant to
 	the sorting problem lower bounds proof?</p>
       <div class="solution">
-         <var>The worst-case cost for Bubblesort is
+         <var>The worst-case cost for Bubble Sort is
 <code>\Theta(n^2)</code></var>
       </div>
         <ul class="choices">
@@ -29,7 +29,12 @@ is <code>n!</code></var></li>
           <li><var>"Any sorting algorithm can be modeled using a decision tree"</var></li>
         </ul>
 	<div class="hints">
-	  <p>Sorry, no hints are available.</p>
+	  <p>The proof uses decision trees to model sorting algorithms.</p>
+	  <p>The number of permutations affects the size of the
+	  decision tree.</p>
+	  <p>Given a tree of a certain size, we can compute its
+	  minimum depth.</p>
+	  <p>The cost of Bubble Sort does not affect the cost of other sorts.</p>
 	</div>
       </div>
     </div>
