--- a/Exercises/Sorting/SortBoundMCQ7.html
+++ b/Exercises/Sorting/SortBoundMCQ7.html
@@ -25,7 +25,8 @@
           <li><var>"A search tree"</var></li>
         </ul>
 	<div class="hints">
-	  <p>Sorry, no hints are available.</p>
+	  <p>A decision tree is not a search tree.</p>
+	  <p>A decision tree is a model for behavior, not an algorithm.</p>
 	</div>
       </div>
     </div>
