--- a/Exercises/Sorting/SortBoundTF4.html
+++ b/Exercises/Sorting/SortBoundTF4.html
@@ -28,7 +28,10 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Does Radix Sort compare?</p>
+	<p>While Radix Sort does not directly compare the keys of two
+	records against each other, it does do a comparison for each
+	digit of each key.</p>
       </div>
     </div>
   </div>
