--- a/Exercises/Sorting/SortCompareMCQ4.html
+++ b/Exercises/Sorting/SortCompareMCQ4.html
@@ -24,7 +24,12 @@
 	<li><var>"Neither"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>If the key were a property of the record, then records
+	could only be sorted in one order.</p>
+	<p>If the key were a property of the record, then we could
+	only search on a single value.</p>
+	<p>But we really want to be able to sort or search on
+	different fields.</p>
       </div>
     </div>
   </div>
