--- a/Exercises/Sorting/SortCompareTF1.html
+++ b/Exercises/Sorting/SortCompareTF1.html
@@ -29,7 +29,8 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>C++ will let us do this.</p>
+	<p>But not many other languages support such "operator overloading".</p>
       </div>
     </div>
   </div>
