--- a/Exercises/Sorting/SortCompareTF2.html
+++ b/Exercises/Sorting/SortCompareTF2.html
@@ -28,7 +28,9 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>If we use a ".key()" function, then there is only one way
+	to compute the key for a record.</p>
+	<p>That means the records cannot be sorted on differing fields.</p>
       </div>
     </div>
   </div>
