--- a/Exercises/Sorting/SortCompareTF3.html
+++ b/Exercises/Sorting/SortCompareTF3.html
@@ -28,7 +28,10 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>When we store key/value pairs, we are explicitly storing
+	the key used by that search structure.</p>
+	<p>This permits a collection of records to be sorted or
+	searched in many different ways.</p>
       </div>
     </div>
   </div>
