--- a/Exercises/Sorting/SortCompareTF5.html
+++ b/Exercises/Sorting/SortCompareTF5.html
@@ -27,7 +27,10 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Sorting relies on comparisons.</p>
+	<p>We need to be able to compare any two records and tell
+	which one is less than the other.</p>
+	<p>This is the essence of a total order.</p>
       </div>
     </div>
   </div>
