--- a/Exercises/Sorting/SortCompareTF6.html
+++ b/Exercises/Sorting/SortCompareTF6.html
@@ -27,7 +27,9 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Exact match requires only that we can tell if two keys are equal.</p>
+	<p>We do not need to decide which one is greater than the other.</p>
+	<p>Thus, we do not need a total order.</p>
       </div>
     </div>
   </div>
