--- a/Exercises/Sorting/SortIntroMCQ1.html
+++ b/Exercises/Sorting/SortIntroMCQ1.html
@@ -26,7 +26,11 @@
           <li><var>"An algorithm that always gives the same order for duplicate keys from run to run"</var></li>
         </ul>
 	<div class="hints">
-	  <p>Sorry, no hints are available.</p>
+	  <p>"Stable" has nothing to do with how fast an algorithm is.</p>
+	  <p>It refers to maintaining the relative order of records
+	  with equal key values.</p>
+	  <p>In some applications, we require that records with equal
+	  key value preserve the relative order of those records.</p>
 	</div>
       </div>
     </div>
