--- a/Exercises/Sorting/SortIntroMCQ2.html
+++ b/Exercises/Sorting/SortIntroMCQ2.html
@@ -25,7 +25,8 @@
           <li><var>"The amount by which the values are out of order"</var></li>
         </ul>
 	<div class="hints">
-	  <p>Sorry, no hints are available.</p>
+	  <p>If we speed up the CPU by a factor of two, both sorts
+	  will go twice as fast.</p>
 	</div>
       </div>
     </div>
