--- a/Exercises/Sorting/SortIntroMCQ4.html
+++ b/Exercises/Sorting/SortIntroMCQ4.html
@@ -26,7 +26,10 @@
           <li><var>"When the amount of available space is small"</var></li>
         </ul>
 	<div class="hints">
-	  <p>Sorry, no hints are available.</p>
+	  <p>CPU speed would affect all comparisons in the same way.</p>
+	  <p>Number of records or amount of space won't affect the
+	  value of counting comparisons.</p>
+	  <p>The longer the string, the longer it takes to compare.</p>
 	</div>
       </div>
     </div>
