--- a/Exercises/Sorting/ExchangeMCQtotal.html
+++ b/Exercises/Sorting/ExchangeMCQtotal.html
@@ -17,7 +17,7 @@
     <div id="problem-type-or-description">
       <p class="question"> The total number of pairs of records
 	among <code>n</code> records is:</p>
-      <div class="solution"><var><code>n(n+1)/2</code></var></div>
+      <div class="solution"><var><code>n(n-1)/2</code></var></div>
       <ul class="choices">
 	<li><var><code>n^2/2</code></var></li>
 	<li><var><code>n</code></var></li>
@@ -26,9 +26,14 @@
 	<li><var><code>n \log n</code></var></li>	 	 
 	<li><var><code>n!</code></var></li>
 	<li><var><code>n!/2</code></var></li>
+	<li><var><code>n(n+1)/2</code></var></li>
       </ul>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>There are <code>n</code> ways to pick the first record in
+        the pair.</p>
+	<p>This leaves <code>n-1</code> ways to pick the second
+	record.</p>
+	<p>We consider pair (A, B) to be the same as pair (B, A).</p>
       </div>
     </div> 	  
   </div>
