--- a/Exercises/Sorting/MergesortMCQ6.html
+++ b/Exercises/Sorting/MergesortMCQ6.html
@@ -35,7 +35,9 @@
 	<li><var>"(2) and (3) only"</var></li>
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>We have an implementation that works on arrays.</p>
+	<p>It is also easy to do this on linked lists.</p>
+	<p>It works fine on both singly and doubly lined lists.</p>
       </div>
     </div>
   </div>
