--- a/Exercises/Sorting/QuicksortMCQcomplex.html
+++ b/Exercises/Sorting/QuicksortMCQcomplex.html
@@ -24,7 +24,9 @@
 	<li><var>"Worst, average, and Best"</var></li>	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>There are a few really bad inputs.</p>
+	<p>While there are a few bad inputs, they are so few as to not
+	affect the average or best cases.</p>
       </div>
     </div>
   </div>
