--- a/Exercises/Sorting/QuicksortMCQpcost.html
+++ b/Exercises/Sorting/QuicksortMCQpcost.html
@@ -24,7 +24,10 @@
 	<li><var><code>\Theta(n \log n)</code></var></li>	  	 
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>Partition moves indices inwards until the meet.</p>
+	<p>Each step either swaps or moves indices.</p>
+	<p>No record can swap more than once, and the total number of
+	index moves can only be the length of the partition.</p>
       </div>
     </div>
   </div>
