--- a/Exercises/Sorting/RadixSortMCQ5.html
+++ b/Exercises/Sorting/RadixSortMCQ5.html
@@ -24,7 +24,10 @@
 	<li><var><code>\Theta(n^3)</code></var></li>
       </ul>
       <div class="hints">
-	<p>Sorry, no hints are available.</p>
+	<p>In this question, we restricted the key range.</p>
+	<p>We restrict the key range to be a constant number of
+	digits, independent of the number of records.</p>
+	<p>So, each record is processed three times.</p>
       </div>
     </div> 
   </div>
