Fixed the embed heights of several hashing exercises to allow the hints to be displayed

--- a/Exercises/Hashing/HashingDoubleProbePRO.html
+++ b/Exercises/Hashing/HashingDoubleProbePRO.html
@@ -187,7 +187,7 @@ var getH2 = function(K) {
         <p>First, we hash to the home slot with the first hash function.</p>
         <p>If there is a collistion, then we use the second hash
           function to compute a stepsize.</p>
-	<p>We then use linear pobing by the cmoputed step size.</p>
+	<p>We then use linear pobing by the computed step size.</p>
       </div>
     </div>
   </div>
