--- a/Exercises/Sorting/SelsortMCQ2.html
+++ b/Exercises/Sorting/SelsortMCQ2.html
@@ -30,7 +30,7 @@
 	position (never to be moved again by the sort)?</p>
       <div class="solution"><var>NUM</var></div>
       <div class="hints">
-	<p>On each pass, Selection Sort puts a records into its final
+	<p>On each pass, Selection Sort puts a record into its final
 	position.</p>
 	<p>So, if Selection Sort has done <var>NUM</var> passes, then
 	at least <var>NUM</var> records are in their final positions.</p>
