--- a/Exercises/Sorting/SelsortMCQswaps.html
+++ b/Exercises/Sorting/SelsortMCQswaps.html
@@ -30,7 +30,7 @@
           depend on the particular order of the input array?</p>
        <p>No, it does not.</p>
        <p>Recall that our implementation for Selection Sort will
-          try to swap even if the current element is in its correct
+          try to swap even if the current record is in its correct
           location.</p>
       </div>
     </div> 
