--- a/Exercises/Sorting/SelsortMCQwhen.html
+++ b/Exercises/Sorting/SelsortMCQwhen.html
@@ -28,6 +28,8 @@
       <div class="hints">
 	<p>The big advantage of Selection Sort is that it keeps the
 	  number of swaps small.</p>
+	<p>So it will make best use of this advantage when the cost to
+	swap is large.</p>
       </div>
     </div>
 </div>
