--- a/Exercises/Sorting/SelsortMCQworst.html
+++ b/Exercises/Sorting/SelsortMCQworst.html
@@ -25,7 +25,7 @@
       <div class="hints">
         <p>Selection Sort's implementation is made up of two nested for loops.</p>
         <p>The outer for loop is executed <code>n-1</code> times.</p>
-        <p>The inner for loop is executed <code>i</code> times.</p>
+        <p>The inner for loop is executed <code>n-i</code> times.</p>
         <p>The total cost is the sum of <code>i</code>'s
            for <code>i</code> goes from 1 to <code>n</code>.</p>
       </div>
