--- a/Exercises/Sorting/SelsortPRO.html
+++ b/Exercises/Sorting/SelsortPRO.html
@@ -159,7 +159,7 @@ var checkAnswer = function (arr_size) {
         </div>
       </div>
       <div class="hints">
-        <p>Determine the element which should appear at
+        <p>Determine the record that should appear at
         index <var>sort_pos</var> using Selection Sort.</p>
         <p>Selection sort will place the largest record in the range
         [0 to <var>sort_pos</var>] at position <var>sort_pos</var>.</p>
