--- a/Exercises/Sorting/SelsortMCQcomps.html
+++ b/Exercises/Sorting/SelsortMCQcomps.html
@@ -24,8 +24,8 @@
 	<li><var>"There is a big difference, the asymptotic running time can change"</var></li>
       </ul>
       <div class="hints">
-        <p>Does Selection Sort change when it make a comparison according to the order of the
-           array input values?</p>
+        <p>Does Selection Sort change when it make a comparison
+           according to the order of the array input values?</p>
         <p>No, it does not matter what order the input values have.</p>
       </div>
     </div>
