--- a/Exercises/Sorting/SelsortSumm.html
+++ b/Exercises/Sorting/SelsortSumm.html
@@ -19,6 +19,7 @@
   <div class="exercise" data-name="SelsortMCQcost"></div>
   <div class="exercise" data-name="SelsortMCQsorted"></div>
   <div class="exercise" data-name="SelsortTFstable"></div>
+  <div class="exercise" data-name="SelsortMCQstable"></div>
   <div class="exercise" data-name="SelsortMCQswaps"></div>
   <div class="exercise" data-name="SelsortMCQwhen"></div>
   <div class="exercise" data-name="SelsortMCQworst"></div>
