--- a/AV/Development/kd-treeAV.html
+++ b/AV/Development/kd-treeAV.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
-  <head>
-    <title>Kd-Tree Visualization</title>
-    <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" media="screen" title="kd-tree" charset="utf-8" />
-     <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
+<head>
+  <title>Kd-Tree Visualization</title>
+  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" media="screen" title="kd-tree" charset="utf-8" />
+  <link href="../../lib/odsaAV-min.css" title="CSS" rel="stylesheet" type="text/css" />
   
-    <style>
+  <style>
+    .jsavcanvas {
+      width: 800px;
+      height: 480px;
+    }
     .jsavtree {
       position: relative;
       left:100px;
@@ -27,21 +31,19 @@
       pointer-events: visible;
     }
     .jsavnode {
-     line-height : 22px;
-     height :50px;
-     width :50px;
-     }
-    .jsavlabel
-    {
+      line-height : 22px;
+      height :50px;
+      width :50px;
+    }
+    .jsavlabel {
     	position:absolute;
     }
     .jsavcounter {
-  position: absolute;
-  width: 60px;  
-  height:40px;
-}
-
-    </style>
+      position: absolute;
+      width: 60px;  
+      height:40px;
+    }
+  </style>
   </head>
   <body>
     
@@ -56,9 +58,9 @@
        src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-    <script src="../JSAV/lib/jquery.transform.light.js"></script>
-    <script src="../JSAV/lib/raphael.js"></script>
-    <script src="../JSAV/build/JSAV-min.js"></script>
+    <script src="../../JSAV/lib/jquery.transform.light.js"></script>
+    <script src="../../JSAV/lib/raphael.js"></script>
+    <script src="../../JSAV/build/JSAV-min.js"></script>
 
    <script>
      
