--- a/AV/Development/PrimAV.html
+++ b/AV/Development/PrimAV.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-  <link rel="stylesheet" href="PrimAV.css" type="text/css" />
+  <link rel="stylesheet" href="PrimAVoptimized.css" type="text/css" />
 </head>
 
 <body>
@@ -44,6 +44,6 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
-<script src="PrimAV.js"></script>
+<script src="PrimAVoptimized.js"></script>
 </body>
 </html>
