--- a/Exercises/Sorting/QuicksortSumm.html
+++ b/Exercises/Sorting/QuicksortSumm.html
@@ -21,6 +21,7 @@
   <div class="exercise" data-name="QuicksortMCQpcost"></div>
   <div class="exercise" data-name="QuicksortMCQcomplex"></div>
   <div class="exercise" data-name="QuicksortMCQequal"></div>
+  <div class="exercise" data-name="QuicksortMCQpartit"></div>
   <div class="exercise" data-name="QuicksortTFstable"></div>
   <div class="exercise" data-name="QuicksortMCQtimeA"></div>
   <div class="exercise" data-name="QuicksortMCQtimeB"></div>
