--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -200,7 +200,7 @@
         {% block body %}{% endblock %}
       </div>
       <div class="bottomnav">
-      <p><span class="email_div" style="display:inline;"><a id="contact_us" class="contact" style="float:left;color:blue;" rel="nofollow" href="mailto:">Contact Us |</a><a style="float:left;color:blue;" rel="nofollow" href="{{ odsa_root_path + 'lib/Privacy.html' }}" target="_blank">| Privacy</a></span>&#160;&#160;
+      <p><span class="email_div" style="display:inline;"><a id="contact_us" class="contact" style="float:left;color:blue;" rel="nofollow" href="mailto:">Contact Us</a> || <a style="float:left;color:blue;" rel="nofollow" href="{{ odsa_root_path + 'lib/Privacy.html' }}" target="_blank">Privacy</a> || <a style="float:left;color:blue;" rel="nofollow" href="{{ odsa_root_path + 'lib/license.html' }}" target="_blank">License</a></span>&#160;&#160;
       {{ btm_nav() }}</p>
       </div>
       <img style="float:right;" src="_static/nsf1.gif" height="62" width="62" alt="nsf"/>
