--- a/AV/Development/binarytreePreorder.html
+++ b/AV/Development/binarytreePreorder.html
@@ -3,7 +3,7 @@
   <head>
     <title>Binary Tree Preorder Traversal</title>
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="../opendsaPRO.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
     <style>
     #av { width: 98%;}
     .jsavtree {
@@ -40,14 +40,14 @@
         </div>
       </form>
     </div>
-    <script
-       src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-    <script src="../../JSAV/lib/jquery.transform.light.js"></script>
-    <script src="../../JSAV/lib/raphael.js"></script>
-    <script src="../../JSAV/build/JSAV-min.js"></script>
-    <script>
+<script src="../../lib/jquery.min.js"></script>
+<script src="../../lib/jquery-ui.min.js"></script>
+<script src="../../JSAV/lib/jquery.transform.light.js"></script>
+<script src="../../JSAV/lib/raphael.js"></script>
+<script src="../../JSAV/build/JSAV-min.js"></script>
+<script src="../../lib/odsaUtils-min.js"></script>
+<script src="../../lib/odsaAV-min.js"></script>
+<script
   (function($) {
 
     var comp = function(a, b) {
