--- a/AV/Development/BST-insert.html
+++ b/AV/Development/BST-insert.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Binary Search Tree Insertion Visualization</title>
-    <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" media="screen" title="kd-tree" charset="utf-8" />
+    <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" media="screen" title="kd-tree" charset="utf-8" />
      <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
   
     <style>
@@ -35,9 +35,9 @@
        src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-    <script src="../JSAV/lib/jquery.transform.light.js"></script>
-    <script src="../JSAV/lib/raphael.js"></script>
-    <script src="../JSAV/build/JSAV-min.js"></script>
+    <script src="../../JSAV/lib/jquery.transform.light.js"></script>
+    <script src="../../JSAV/lib/raphael.js"></script>
+    <script src="../../JSAV/build/JSAV-min.js"></script>
     <script src="BST.js"></script>
 
 
