Recommiting the Align_Table_slideshow.html with a few minor changes, will probably be committed again later after I make a few more changes to make things more readable.

--- a/AV/Development/Align_Table_Slideshow.html
+++ b/AV/Development/Align_Table_Slideshow.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+    Samuel A. Micka
+-->
 <html>
   <head>
     <meta charset="UTF-8">
@@ -34,12 +37,11 @@
        src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-<script src="../../JSAV/lib/jquery.transform.light.js"></script>
-<script src="../../JSAV/lib/raphael.js"></script>
-<script src="../../JSAV/build/JSAV-min.js"></script>
+    <script src="../../JSAV/lib/jquery.transform.light.js"></script>
+    <script src="../../JSAV/lib/raphael.js"></script>
+    <script src="../../JSAV/build/JSAV-min.js"></script>
     <script>
 
-  (function() {
     var av = new JSAV("container");
 
 
@@ -274,7 +276,6 @@
     align.highlight(8);
 
     av.recorded();
-}()); 
     </script>
   </body>
 </html>
